--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>欢迎来到拼音学习网站</h1>
     <p>作业入口：<a href=" ">点击进入拼音测验</a></p>
-    <p>教学视频：<a href="这里后续填钉钉云盘链接">观看拼音教学视频</a></p>
+    <p>教学视频：<a href="">观看拼音教学视频</a></p>
 </body>
 </html>
