--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,12 +1,12 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>幼儿中文拼音教育平台</title>
+    <title>数智时代幼儿拼音教育平台</title>
 </head>
 <body>
-    <h1>欢迎来到拼音学习网站</h1>
-    <p>作业入口：<a href=" ">点击进入拼音测验</a></p>
-    <p>教学视频：<a href="">观看拼音教学视频</a></p>
+    <h1>幼儿拼音学习资源</h1>
+    <p>点击获取拼音教学视频：拼音教学视频</p >
+    <p>数智工具推荐：豆包AIGC（生成拼音练习素材）</p >
 </body>
 </html>
